Added tournament count in /tournament endpoint, also refactored pagination functionality
